# Epaxos-Coordinator

./: .gitignore  CMakeLists.txt  README.md  build.sh  comm.md
c/: Makefile  MyUnderstandProject.udb  cli_mt  cli_st  config.h  config.status  hashtable_itr.lo  libhashtable.la  libtool  libzkmt.la  libzkmt_la-mt_adaptor.lo  libzkmt_la-recordio.lo  libzkmt_la-zk_hashtable.lo  libzkmt_la-zk_log.lo  libzkmt_la-zookeeper.jute.lo  libzkmt_la-zookeeper.lo  libzkst.la  libzookeeper_mt.la  libzookeeper_st.la  load_gen  recordio.lo  st_adaptor.lo  zk_hashtable.lo  zk_log.lo  zookeeper.jute.lo  zookeeper.lo
c/.deps/: cli.Po  cli_mt-cli.Po  hashtable.Plo  hashtable_itr.Plo  libzkmt_la-mt_adaptor.Plo  libzkmt_la-recordio.Plo  libzkmt_la-zk_hashtable.Plo  libzkmt_la-zk_log.Plo  libzkmt_la-zookeeper.Plo  libzkmt_la-zookeeper.jute.Plo  load_gen-load_gen.Po  recordio.Plo  st_adaptor.Plo  zk_hashtable.Plo  zk_log.Plo  zookeeper.Plo  zookeeper.jute.Plo
c/.libs/: cli_mt  cli_st  libzookeeper_mt.lai  libzookeeper_mt.so.2.0.0  libzookeeper_st.exp  libzookeeper_st.lai  libzookeeper_st.so.2.0.0  libzookeeper_st.ver  load_gen
client/include/: client.h
client/src/: client.cpp
config/: config.h
consensus/include/: replica.h  tk_command.h  tk_config.h  tk_consensus.h  tk_elog.h  tk_log.h  tk_message.h  tk_server.h
consensus/src/: replica.cpp
consensus/test/: runtest.sh  test_serialization.cpp
coor_log/: CMakeLists.txt  test.cpp
coor_log/include/: tk_txn.h
coor_log/src/: tk_txn.cpp
coor_log/test/: test.cpp
database/include/: Tkdatabase.h  Tkdatanode.h
database/src/: Tkdatabase.cpp  Tkdatanode.cpp
database/test/: CMakeLists.txt  dbtest  dbtest.cpp
execution/include/: exec.h
execution/src/: exec.c  exec.cpp
execution/test/: CMakeLists.txt  README.md  etest.cpp  etest.h
include/: Tkdatabase.h  Tkdatanode.h
master/include/: master.h
master/src/: master.cpp
serialization/: CMakeLists.txt
serialization/include/: protobuff.pb.h  tk_jute.h
serialization/src/: protobuff.pb.cc  test.cpp  tk_jute.cpp
server/include/: server.h
server/src/: server.cpp
src/: Tkdatabase.cpp  Tkdatanode.cpp
test/: add_node_test.cpp
transporter/include/: transporter_rdma.h
transporter/src/: transporter_rdma.c
transporter/test/: new_test.c  rdma_module_test_client.c  rdma_module_test_server.c  run_rdma_module_test.sh  test_client
utils/include/: communication.h  debug.h  go_thread.h  msg_queue.h  utils.h
utils/src/: communication.cpp  go_thread.cpp  msg_queue.cpp  utils.cpp
utils/test/: CMakeLists.txt  runtest.sh  runtest.sh_bak  utest  utest.cpp  utest.h
zookeeperServer/: CMakeLists.txt
zookeeperServer/include/: dataTree.h  proto.h  serverCnxn.h  snapshot.h  watch_manager.h  zk_adaptor.h  zookeeperServer.h  zookeeperServer.jute.h  zookeeperServer.recordio.h  zookeeperServerSnapshot.h
zookeeperServer/src/: dataTree.cpp  serverCnxn.cpp  snapshot.cpp  test.cpp  watch_manager.cpp  zk_adaptor.cpp  zookeeperServer.cpp  zookeeperServer.jute.c  zookeeperServer.recordio.c  zookeeperServerSnapshot.cpp
zookeeperServer/test/: testClient.java
